Fix octicons inclusion

--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,4 @@
 @import (less) "../bower_components/bootstrap/less/bootstrap.less";
-@import (less) "../bower_components/octicons/octicons/octicons.css";
 
 * {
     -webkit-overflow-scrolling: touch;
@@ -16,3 +15,13 @@ body .octicon {
 html, body {
     height: 100%;
 }
+
+
+#page {
+    padding: 15px;
+
+    .intro {
+        text-align: center;
+    }
+}
+
