--- a/less/main.less
+++ b/less/main.less
@@ -1,4 +1,5 @@
 @import (less) "../bower_components/bootstrap/less/bootstrap.less";
+@import "variables.less";
 
 * {
     -webkit-overflow-scrolling: touch;
@@ -16,12 +17,41 @@ html, body {
     height: 100%;
 }
 
+body {
+    background: #fff;
+}
 
 #page {
-    padding: 15px;
+
 
     .intro {
+        padding: 15px;
+        position: relative;
+        overflow: hidden;
         text-align: center;
+        background: #f3f5f9;
+        border-bottom: 1px solid #e0e4e8;
+
+        h1 {
+            font-size: 60px;
+            font-weight: 200;
+            color: @brand-success;
+        }
+
+        p {
+            font-size: 26px;
+            font-weight: 200;
+        }
+
+        .preview {
+            img {
+                width: 100%;
+                margin-bottom: -140px;
+                max-width: 1000px;
+            }
+        }
     }
+
+
 }
 
