--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,8 @@
 /* Bootstrap */
 @text-color: #717171;
 
-@brand-primary:         #594f8d;
+@font-size-base:          16px;
+
 @brand-success:         #a6d87a;
 @brand-info:            #81daf6;
 @brand-warning:         #fcc44d;
